exampple/k8s/service.yaml
---
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-pipeline-service
  namespace: devsecops-pipeline
  labels:
    app: devsecops-pipeline
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: devsecops-pipeline
